# glsl-editor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  resource.rc
.github/workflows/: cmake.yml
cmake/: FindOpenGL.cmake
examples/: lsd.txt  pigeon.txt
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/CodePanel/: CMakeLists.txt  CodePanel.cpp  CodePanel.h
src/MainForm/: CMakeLists.txt  MainForm.cpp  MainForm.h
src/MainFrame/: CMakeLists.txt  MainFrame.cpp  MainFrame.h
src/MainToolbar/: CMakeLists.txt  MainToolbar.cpp  MainToolbar.h
src/RenderPanel/: CMakeLists.txt  RenderPanel.cpp  RenderPanel.h
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/Time/: CMakeLists.txt  Time.cpp  Time.h
src/UniformsPanel/: CMakeLists.txt  IUniformDTO.h  UniformDTO.cpp  UniformDTO.h  UniformLine.cpp  UniformLine.h  UniformsPanel.cpp  UniformsPanel.h
